@@ -274,7 +274,6 @@ gtk_xtbin_realize (GtkWidget *widget)
 #if GTK_CHECK_VERSION(2, 18, 0)
   GtkAllocation widget_allocation;
 #endif
-  gint  x, y, w, h, d; /* geometry of window */
 
 #ifdef DEBUG_XTBIN
   printf("gtk_xtbin_realize()\n");
@@ -285,9 +284,15 @@ gtk_xtbin_realize (GtkWidget *widget)
   xtbin = GTK_XTBIN (widget);
 
   /* caculate the allocation before realize */
+#if GTK_CHECK_VERSION(2, 24, 0)
+  allocation.width = gdk_window_get_width(xtbin->parent_window);
+  allocation.height = gdk_window_get_height(xtbin->parent_window);
+#else
+  gint  x, y, w, h, d; /* geometry of window */
   gdk_window_get_geometry(xtbin->parent_window, &x, &y, &w, &h, &d);
   allocation.width = w;
   allocation.height = h;
+#endif
   gtk_widget_size_allocate (widget, &allocation);
 
 #ifdef DEBUG_XTBIN
